--- a/.local/ProjectSettings.json
+++ b/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"JD-Jeff (2nd Draft sample with DoWhile-loop).xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
+{"OpenedDocuments":"[\"JD-Jeff (final Draft sample).xaml\",\"perc.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
