--- a/.local/ProjectSettings.json
+++ b/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"JD-Jeff (final Draft sample).xaml\",\"perc.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
+{"OpenedDocuments":"[\"perc.xaml\",\"JD-Jeff (final).xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
